[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.28.2"
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"
serde_with = "3.11.0"
cargo-manifest = "0.17.0"
serde_yaml = "0.9.34+deprecated"