[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["cookie"] }
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.42.0"
serde = { version = "1.0.216", features = ["derive"] }
toml = "0.8.19"
serde_with = "3.11.0"
cargo-manifest = "0.17.0"
serde_yaml = "0.9.34"
cch24-validator = "16.0.0"
leaky-bucket = "1.1.2"
serde_json = "1.0.133"
jsonwebtoken = "9.3.0"